--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "caniuse-lite": "^1.0.30001474",
     "dotenv": "^16.0.3",
     "pretty": "^2.0.0",
     "react": "17.0.2",
