--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.3",
     "caniuse-lite": "^1.0.30001474",
     "dotenv": "^16.0.3",
+    "gh-pages": "^5.0.0",
     "pretty": "^2.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
