--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "00-practice-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://samiyazaki.github.io/Portfolio-A-Deux",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
