--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "00-practice-app",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://samiyazaki.github.io/Portfolio-A-Deux",
+  "homepage": "https://samiyazaki.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
