Adjusting sizing and styling

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "00-practice-app",
+  "name": "portfolio-a-deux",
   "version": "0.1.0",
   "private": false,
   "homepage": "https://samiyazaki.github.io/",
