--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-a-deux",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://samiyazaki.github.io/",
+  "homepage": "https://samiyazaki.github.io/Portfolio-A-Deux/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
