--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "caniuse-lite": "^1.0.30001474",
+    "canvas-confetti": "^1.6.0",
     "dotenv": "^16.0.3",
     "gh-pages": "^5.0.0",
     "pretty": "^2.0.0",
